@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: bootstrap
-          image: iqss/dataverse-k8s:5.13
+          image: iqss/dataverse-k8s:tt #5.13
           command: ["scripts/bootstrap-job.sh"]
           envFrom:
             - configMapRef:
