@@ -9,6 +9,6 @@ resources:
 
 images:
   - name: iqss/dataverse-k8s
-#    newTag: "tt"
-    newTag: "5.13"
+    newTag: "tt"
+#    newTag: "5.13"
 #    newTag: "4.20-payara"
